# wikiusers

./: .gitignore  Pipfile  README.md  pyproject.toml
metrics/ca/: monthly_active_population_1000.json  monthly_active_population_15.json  monthly_active_population_5.json  monthly_active_population_50.json  monthly_active_population_incremental_1000.json  monthly_active_population_incremental_15.json  monthly_active_population_incremental_150.json  monthly_active_population_incremental_5.json  monthly_active_population_incremental_50.json  monthly_dropoff_with_threshold_12.json  monthly_dropoff_with_threshold_12_over_active_population_1000.json  monthly_dropoff_with_threshold_12_over_active_population_15.json  monthly_dropoff_with_threshold_12_over_active_population_200.json  monthly_dropoff_with_threshold_12_over_active_population_5.json  monthly_dropoff_with_threshold_12_over_active_population_50.json  monthly_total_population.json  monthly_total_population_incremental.json
metrics/es/: monthly_dropoff_with_threshold_12_over_active_population_10.json  monthly_dropoff_with_threshold_12_over_active_population_1000.json  monthly_dropoff_with_threshold_12_over_active_population_200.json  monthly_dropoff_with_threshold_12_over_active_population_50.json
metrics/it/: monthly_dropoff_with_threshold_12_over_active_population_1000.json  monthly_dropoff_with_threshold_12_over_active_population_15.json  monthly_dropoff_with_threshold_12_over_active_population_200.json  monthly_dropoff_with_threshold_12_over_active_population_5.json  (+1 more)
wikiusers/: __init__.py  __main__.py  main.py
(+321 files in other folders)
